--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,56 +1,51 @@
 @font-face {
     font-family: 'FontAwesome';
-    src: url('../fonts/fontawesome-webfont.eot');
-    src: url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/fontawesome-webfont.woff2') format('woff2'),
-        url('../fonts/fontawesome-webfont.woff') format('woff'),
-        url('../fonts/FontAwesome.otf'),
-        url('../fonts/fontawesome-webfont.svg#VarelaRound') format('svg');
+    src: url('../fonts/FontAwesome/fontawesome-webfont.eot');
+    src: url('../fonts/FontAwesome/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/FontAwesome/fontawesome-webfont.woff2') format('woff2'),
+        url('../fonts/FontAwesome/fontawesome-webfont.woff') format('woff'),
+        url('../fonts/FontAwesome/FontAwesome.otf'),
+        url('../fonts/FontAwesome/fontawesome-webfont.svg#VarelaRound') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'GothamPro';
-    src: url('../fonts/GothamPro-Bold.eot');
-    src: url('../fonts/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/GothamPro-Bold.woff') format('woff'),
-        url('../fonts/GothamPro-Bold.ttf'),
-        url('../../fonts/GothamPro-Bold.svg#VarelaRound') format('svg');
+    font-family: 'GothamPro-Bold';
+    src: url('../fonts/GothamPro/GothamPro-Bold.eot');
+    src: url('../fonts/GothamPro/GothamPro-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GothamPro/GothamPro-Bold.woff') format('woff'),
+        url('../fonts/GothamPro/GothamPro-Bold.ttf');
     font-weight: 900;
     font-style: normal;
 }
 
 
 @font-face {
-    font-family: 'GothamPro';
-    src: url('../fonts/GothamPro-Medium.eot');
-    src: url('../fonts/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
-        url('../../fonts/GothamPro-Medium.woff') format('woff'),
-        url('../fonts/GothamPro-Medium.ttf'),
-        url('../../fonts/GothamPro-Medium.svg#VarelaRound') format('svg');
+    font-family: 'GothamPro-Medium';
+    src: url('../fonts/GothamPro/GothamPro-Medium.eot');
+    src: url('../fonts/GothamPro/GothamPro-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GothamPro/GothamPro-Medium.ttf');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'GothamPro';
-    src: url('../fonts/GothamPro.eot');
-    src: url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/GothamPro.woff') format('woff'),
-        url('../fonts/GothamPro.ttf'),
-        url('../../fonts/GothamPro.svg#VarelaRound') format('svg');
+    src: url('../fonts/GothamPro/GothamPro.eot');
+    src: url('../fonts/GothamPro/GothamPro.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GothamPro/GothamPro.woff') format('woff'),
+        url('../fonts/GothamPro/GothamPro.ttf');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'GothamPro';
-    src: url('../fonts/GothamPro-Light.eot');
-    src: url('../fonts/GothamPro-Light.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/GothamPro-Light.woff') format('woff'),
-        url('../fonts/GothamPro-Light.ttf'),
-        url('../../fonts/GothamPro-Light.svg#VarelaRound') format('svg');
+    font-family: 'GothamPro-Light';
+    src: url('../fonts/GothamPro/GothamPro-Light.eot');
+    src: url('../fonts/GothamPro/GothamPro-Light.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GothamPro/GothamPro-Light.woff') format('woff'),
+        url('../fonts/GothamPro/GothamPro-Light.ttf');
     font-weight: 100;
     font-style: normal;
 }
